--- a/assets/css/staff-leave-approval.css
+++ b/assets/css/staff-leave-approval.css
@@ -86,3 +86,18 @@
     padding: 40px;
     color: #666;
 } 
+
+.warning-message {
+    color: red;
+}
+
+.warning-box {
+    position: relative;
+    padding: 1rem 1rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+}
