--- a/assets/css/staff.css
+++ b/assets/css/staff.css
@@ -145,7 +145,7 @@ input[type="checkbox"]:checked::after {
 }
 
 #date-select {
-    margin-bottom:10px;
+    margin-bottom:15px;
     padding: 0.5rem;
     border: 1px solid #e1e8f0;
     border-radius: 8px;
@@ -190,11 +190,11 @@ button {
 
 /* Staff Attendance page*/
 .attendance-container {
-    margin-top:100px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
+    padding:30px;
+    width: 95%;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
 }
 
 .attendance-container-list {
@@ -205,7 +205,6 @@ button {
     width: 100%;
     overflow-y: auto;
 }
-
 
 .attendance-record {
     display: flex;
@@ -239,17 +238,13 @@ button {
     font-weight: bold;
     text-align: left;
     color: #333;
-    margin-bottom: 5px; /* Space below the date text */
+    margin-bottom: 15px; /* Space below the date text */
 }
 
 
 input[type="checkbox"] {
     width: 20px;
     height: 20px;
-}
-
-.attendance-date {
-    margin: 20px 0;
 }
 
 .attendance-date input[type="date"] {
@@ -260,9 +255,8 @@ margin-right: 10px;
 }
 
 .attendance-date #selected-date {
-
-display: block;
-font-weight: bold;
+    display: block;
+    font-weight: bold;
 }
 
 /* Staff Registration page */
