--- a/assets/css/all-leave-request.css
+++ b/assets/css/all-leave-request.css
@@ -1,14 +1,13 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
 
 /* Overall Layout */
 .leave-dashboard {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 30px;
+    margin-left: 50px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    width: 90%;
+    box-sizing: border-box;
 }
 
 /* Header Section */
@@ -110,7 +109,7 @@ body {
 
 .view-btn {
     justify-self: end;
-    background-color: #4CAF50;
+    background-color: #007bff;
     color: white;
     padding: 8px 16px;
     border-radius: 6px;
@@ -120,7 +119,7 @@ body {
 }
 
 .view-btn:hover {
-    background-color: #45a049;
+    background-color: #0056b3;
 }
 
 /* Status Badge */
