--- a/assets/css/managerDashboard.css
+++ b/assets/css/managerDashboard.css
@@ -121,6 +121,10 @@
     width: 100%;
 }
 
+.export-options form {
+    margin: auto 0;
+}
+
 .export-btn {
     text-decoration: none;
     padding: 10px 20px;
@@ -129,7 +133,6 @@
     color: white;
     border: none;
     cursor: pointer;
-    margin: auto 0;
 }
 
 .export-btn:hover {
