Show current package on the card

--- a/assets/css/parent.css
+++ b/assets/css/parent.css
@@ -1999,7 +1999,7 @@ input[type="file"] {
     color: #1e40af;
 }
 
-.popular-tag {
+.current-package-tag {
     position: absolute;
     top: -12px;
     right: 20px;
